Add copyright notices

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     .repos-bar { background: white; border-bottom: 1px solid #d0d7de; padding: 12px 32px; font-size: 13px; }
     .repos-bar a { color: #0969da; text-decoration: none; margin: 0 8px; }
     .repos-bar a:hover { text-decoration: underline; }
+    .footer { background: white; border-top: 1px solid #d0d7de; padding: 20px 32px; text-align: center; font-size: 12px; color: #57606a; margin-top: 40px; }
+    .footer a { color: #0969da; text-decoration: none; }
+    .footer a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
@@ -312,6 +315,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div className="footer">
+            GHOD View © Copyright 2026 Hypercart | <a href="mailto:info@hypercart.io">info@hypercart.io</a>
           </div>
         </div>
       );
