Update footer with new License

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             </div>
           </div>
           <div className="footer">
-            GHOD View © Copyright 2026 Hypercart | <a href="mailto:info@hypercart.io">info@hypercart.io</a>
+            GHOD View © Copyright 2026 Hypercart | <a href="mailto:info@hypercart.io">info@hypercart.io</a> | <a href="https://github.com/kissplugins/ghod-view/blob/main/LICENSE" target="_blank" rel="noopener noreferrer">FSL 5 License</a>
           </div>
         </div>
       );
