--- a/index.html
+++ b/index.html
@@ -323,29 +323,29 @@
           <div style={{ display: 'flex', alignItems: 'center', justifyContent: 'center', minHeight: '100vh', background: '#f6f8fa' }}>
             <div style={{ background: 'white', padding: '40px', borderRadius: '12px', border: '1px solid #d0d7de', maxWidth: '400px', width: '100%' }}>
               <div style={{ textAlign: 'center', marginBottom: '24px' }}>
-                <div className="logo" style={{ margin: '0 auto 12px', width: '60px', height: '60px', fontSize: '24px' }}>GT</div>
-                <h1 style={{ fontSize: '24px', marginBottom: '8px' }}>GHOD View</h1>
-                <p style={{ color: '#57606a', fontSize: '14px' }}>GitHub Daily Activity Stream</p>
+                <div className="logo" style={{ margin: '0 auto 12px', width: '60px', height: '60px', fontSize: 'var(--fs-lg)' }}>GT</div>
+                <h1 style={{ fontSize: 'var(--fs-lg)', marginBottom: '8px' }}>GHOD View</h1>
+                <p style={{ color: '#57606a', fontSize: 'var(--fs-sm)' }}>GitHub Daily Activity Stream</p>
               </div>
               <div>
-                <label style={{ display: 'block', fontSize: '14px', fontWeight: '600', marginBottom: '8px' }}>GitHub Personal Access Token</label>
+                <label style={{ display: 'block', fontSize: 'var(--fs-sm)', fontWeight: '600', marginBottom: '8px' }}>GitHub Personal Access Token</label>
                 <input 
                   type="password" 
                   value={tokenInput}
                   onChange={(e) => setTokenInput(e.target.value)}
                   onKeyPress={(e) => e.key === 'Enter' && handleLogin()}
                   placeholder="ghp_xxxxxxxxxxxx"
-                  style={{ width: '100%', padding: '8px 12px', border: '1px solid #d0d7de', borderRadius: '6px', fontSize: '14px', marginBottom: '12px' }}
+                  style={{ width: '100%', padding: '8px 12px', border: '1px solid #d0d7de', borderRadius: '6px', fontSize: 'var(--fs-sm)', marginBottom: '12px' }}
                 />
                 <button 
                   onClick={handleLogin}
-                  style={{ width: '100%', padding: '10px', background: '#0969da', color: 'white', border: 'none', borderRadius: '6px', fontSize: '14px', fontWeight: '600', cursor: 'pointer' }}
+                  style={{ width: '100%', padding: '10px', background: '#0969da', color: 'white', border: 'none', borderRadius: '6px', fontSize: 'var(--fs-sm)', fontWeight: '600', cursor: 'pointer' }}
                 >
                   Sign In
                 </button>
-                <p style={{ fontSize: '12px', color: '#57606a', marginTop: '12px', textAlign: 'center' }}>
+                <p style={{ fontSize: 'var(--fs-xs)', color: '#57606a', marginTop: '12px', textAlign: 'center' }}>
                   Need a token? <a href="https://github.com/settings/tokens" target="_blank" rel="noopener noreferrer" style={{ color: '#0969da' }}>Generate one here</a><br/>
-                  <span style={{ fontSize: '12px' }}>Scopes needed: <code>repo</code>, <code>read:user</code>, <code>gist</code></span>
+                  <span style={{ fontSize: 'var(--fs-xs)' }}>Scopes needed: <code>repo</code>, <code>read:user</code>, <code>gist</code></span>
                 </p>
               </div>
             </div>
@@ -368,7 +368,7 @@
               <span>📅 {todayLabel}</span>
               <button 
                 onClick={handleLogout}
-                style={{ padding: '6px 12px', background: '#f6f8fa', border: '1px solid #d0d7de', borderRadius: '6px', fontSize: '12px', cursor: 'pointer' }}
+                style={{ padding: '6px 12px', background: '#f6f8fa', border: '1px solid #d0d7de', borderRadius: '6px', fontSize: 'var(--fs-xs)', cursor: 'pointer' }}
               >
                 Sign Out
               </button>
@@ -449,7 +449,7 @@
               {filteredActivityEntries.length === 0 ? (
                 <div className="card">
                   <div className="card-body">
-                    <div style={{ color: '#57606a', fontSize: '14px' }}>
+                    <div style={{ color: '#57606a', fontSize: 'var(--fs-sm)' }}>
                       {loading ? 'Loading activity...' : `No activity for ${selectedDayLabel}.`}
                     </div>
                   </div>
