Add Mascot image

--- a/index.html
+++ b/index.html
@@ -448,7 +448,9 @@
           <div style={{ display: 'flex', alignItems: 'center', justifyContent: 'center', minHeight: '100vh', background: '#f6f8fa' }}>
             <div style={{ background: 'white', padding: '40px', borderRadius: '12px', border: '1px solid #d0d7de', maxWidth: '400px', width: '100%' }}>
               <div style={{ textAlign: 'center', marginBottom: '24px' }}>
-                <div className="logo" style={{ margin: '0 auto 12px', width: '60px', height: '60px', fontSize: 'var(--fs-lg)' }}>GT</div>
+                <div className="logo" style={{ margin: '0 auto 12px', width: '60px', height: '60px' }}>
+                  <img className="logo-img" src="hyperview-octo.png" alt="GHOD View" />
+                </div>
                 <h1 style={{ fontSize: 'var(--fs-lg)', marginBottom: '8px' }}>GHOD View</h1>
                 <p style={{ color: '#57606a', fontSize: 'var(--fs-sm)' }}>GitHub Daily Activity Stream</p>
               </div>
@@ -482,7 +484,9 @@
         <div>
           <div className="header">
             <div className="header-left">
-              <div className="logo">GT</div>
+              <div className="logo" aria-label="GHOD View">
+                <img className="logo-img" src="hyperview-octo.png" alt="GHOD View" />
+              </div>
               <div className="header-title">
                 <h1>GHOD View</h1>
                 <p>GitHub Daily Activity Stream</p>
